<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.KitchenFragment">

    <Button
        android:id="@+id/btStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btStart"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/etSec"
        app:layout_constraintStart_toStartOf="@+id/etMin"
        app:layout_constraintTop_toBottomOf="@+id/etMin" />

    <EditText
        android:id="@+id/etMin"
        android:layout_width="54dp"
        android:layout_height="49dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:hint="@string/etMin"
        android:inputType="number"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSec"
        android:layout_width="54dp"
        android:layout_height="49dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:ems="10"
        android:hint="@string/etSec"
        android:inputType="number"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/etMin"
        app:layout_constraintTop_toTopOf="@+id/etMin" />
</androidx.constraintlayout.widget.ConstraintLayout>