<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StatisticsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCurrentReadings"
        android:layout_width="413dp"
        android:layout_height="328dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/etDate"
        android:layout_width="133dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/etData"
        android:textColorHint="@color/teal_700"
        android:textSize="12sp"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etValue"
        android:layout_width="119dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/etValue"
        android:textColorHint="@color/red"
        android:textSize="12sp"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/tvAddData"
        app:layout_constraintTop_toTopOf="@+id/etDate" />

    <TextView
        android:id="@+id/tvAddData"
        android:layout_width="26dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvAdd"
        android:textColor="@color/teal_700"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/etDate"
        app:layout_constraintTop_toTopOf="@+id/etDate" />

    <TextView
        android:id="@+id/tvAddValue"
        android:layout_width="24dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvAdd"
        android:textColor="@color/teal_700"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/etValue"
        app:layout_constraintTop_toTopOf="@+id/etValue" />
</androidx.constraintlayout.widget.ConstraintLayout>