<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TodoFragment">

    <TextView
        android:id="@+id/tvToDoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="28dp"
        android:text="@string/tvToDoList"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibtAdd"
        android:layout_width="37dp"
        android:layout_height="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintStart_toEndOf="@+id/tvToDoList"
        app:layout_constraintTop_toTopOf="@+id/tvToDoList" />

    <EditText
        android:id="@+id/etToDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/etToDo"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibtAdd" />

    <TextView
        android:id="@+id/tvAddToDo"
        android:layout_width="46dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:gravity="center"
        android:text="@string/tvAdd"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/etToDo"
        app:layout_constraintTop_toTopOf="@+id/etToDo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvToDo"
        android:layout_width="match_parent"
        android:layout_height="589dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>